v0.8.5-sic -- 27 Sep 2006
-------------------------
- JEP-0055 (Jabber Search)
- DataForm::tag() returns non-const Tag
- enable DataForm to parse <reproted> and <item> elements
- DataFormBase: FieldList holds pointers to DataFormFields now


v0.8.4-sic -- 18 Sep 2006
-------------------------
- compile fix for Mac OS X (thanks to Geoff Schmidt)


v0.8.3-sic -- 14 Sep 2006
-------------------------
- ClientBase: added whitespace ping()
- VCard: fixed typo (vcard --> vCard)


v0.8.2-sic -- 11 Sep 2006
-------------------------
- find dn_skipname on Mac OS X (thanks to Geoff Schmidt)
- look for libgnutls-config in specified path, if given
- VCardHandler: return non-const VCard (*)
- fixed compilation on SkyOS
- maybe-fixed resolver on HPUX
- **experimental** native TLS support on win32
(*) these changes render 0.8.2 source incompatible compared to 0.8

v0.8.1-sic -- 28 Jul 2006
-------------------------
- Registration: allow registration with services (*)
- async inbandbytestreams ack
- fixed memory leak in RosterItem
- RosterListener: announce un/available resource in itemUn/Available() (*)
- RosterManager: don't sync self contact to server
- PrivacyManager: give a privacy list a proper name (thanks to Chris Bond)
- InBandBytestreams: ack closing with correct ID
- Adhoc: provide requesting entities JID in the callback (*)
- DataForm: fixed few minor field handling bugs
- Client: allow lazy username provisioning
(*) these changes render 0.8.1 source incompatible compared to 0.8


v0.8 -- 08 Apr 2006
-------------------
- added an extensible message session abstraction
- added automatic MessageSession creation facilities upon incoming messages
- JEP-0022 (Message Events)
- JEP-0047 (In-Band Bytestreams)
- JEP-0054 (vcard-temp)
- JEP-0085 (Chat State Notifications)
- 'ported' to Linux on Arm (Intel XScale on gumstix in this case)
- RosterManager: returning true from RosterListener::unsubscriptionRequest()